--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,7 @@
 		"target": "ESNext",
 		"useDefineForClassFields": true,
 		"module": "ESNext",
-		"lib": [
-			"ESNext",
-			"DOM"
-		],
+		"lib": ["ESNext", "DOM"],
 		"moduleResolution": "Node",
 		"strict": true,
 		"resolveJsonModule": true,
@@ -19,7 +16,5 @@
 		"declaration": true,
 		"outDir": "./lib"
 	},
-	"include": [
-		"src"
-	]
+	"include": ["src"]
 }
